# autosubtitler

./: ass_parser.py  pyproject.toml  translate.py
